// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerRecordFormatter #recordsToTableData should convert add comparisons to a list of table records correctly 1`] = `
Array [
  Object {
    "action": "Added",
    "address": "100 Nebraska Way",
    "city": "Metropolis",
    "cos_name": "Pascal Pythagoras",
    "cos_territory": "Shangri Pie",
    "customer_code": "customer code",
    "dea_number": "DEA 1222",
    "hin_number": "HIM 23333",
    "key_account_executive": "Brian Bedford",
    "key_account_territory": "Big 8",
    "name": "James Tiberius Kirk",
    "postal": "23245",
    "primary_name": "Larry William Summers",
    "primary_territory": "Midwest",
    "rdb_temp_1_asd": "RDB TEMP 2",
    "rdb_temp_1_rdb": "RDB TEMP 1",
    "rdb_temp_asd": "RDB ASD I",
    "rdb_temp_rdb": "RDB TEMP I",
    "regional_territory": "Oceana",
    "regional_territory_manager_name": "Tom Sawyer",
    "secondary_name": "Dorothy Bigwind",
    "secondary_territory": "Arkansa Valley",
    "state": "Nebraska",
    "uuid": "uuid1",
    "vrs_name": "Peter Pan",
    "vrs_territory": "NeverLand",
    "zipcode": "11111",
  },
  Object {
    "action": "Added",
    "address": "100 Vulcan Path",
    "city": "Pom Far",
    "cos_name": "Julius Shakespeare",
    "cos_territory": "Hong Fang",
    "customer_code": "customer code1",
    "key_account_executive": "Brianna Tablecrossing",
    "key_account_territory": "Cluster 15",
    "name": "Spock",
    "postal": "33333",
    "primary_name": "Betty Winters",
    "primary_territory": "EAST",
    "rdb_temp_1_asd": "RDB TEMP 4",
    "rdb_temp_1_rdb": "RDB TEMP 3",
    "rdb_temp_asd": "RDB ASD II",
    "rdb_temp_rdb": "RDB TEMP II",
    "regional_territory": "Globe",
    "regional_territory_manager_name": "Huck Finn",
    "secondary_name": "Don LittleBreeze",
    "secondary_territory": "Starview Valley",
    "state": "Starlight",
    "uuid": "uuid2",
    "vrs_name": "Paul Piglet",
    "vrs_territory": "SometimesCountry",
    "zipcode": "77777",
  },
]
`;

exports[`CustomerRecordFormatter #recordsToTableData should convert modify comparisons to a list of table records correctly 1`] = `
Array [
  Object {
    "action": "Added",
    "address": "100 Nebraska Way",
    "city": "Metropolis",
    "cos_name": "Pascal Pythagoras",
    "cos_territory": "Shangri Pie",
    "customer_code": "customer code",
    "dea_number": "DEA 1222",
    "hin_number": "HIM 23333",
    "key_account_executive": "Brian Bedford",
    "key_account_territory": "Big 8",
    "name": "James Tiberius Kirk",
    "postal": "23245",
    "primary_name": "Larry William Summers",
    "primary_territory": "Midwest",
    "rdb_temp_1_asd": "RDB TEMP 2",
    "rdb_temp_1_rdb": "RDB TEMP 1",
    "rdb_temp_asd": "RDB ASD I",
    "rdb_temp_rdb": "RDB TEMP I",
    "regional_territory": "Oceana",
    "regional_territory_manager_name": "Tom Sawyer",
    "secondary_name": "Dorothy Bigwind",
    "secondary_territory": "Arkansa Valley",
    "state": "Nebraska",
    "uuid": "uuid1",
    "vrs_name": "Peter Pan",
    "vrs_territory": "NeverLand",
    "zipcode": "11111",
  },
  Object {
    "action": "Added",
    "address": "100 Vulcan Path",
    "city": "Pom Far",
    "cos_name": "Julius Shakespeare",
    "cos_territory": "Hong Fang",
    "customer_code": "customer code1",
    "key_account_executive": "Brianna Tablecrossing",
    "key_account_territory": "Cluster 15",
    "name": "Spock",
    "postal": "33333",
    "primary_name": "Betty Winters",
    "primary_territory": "EAST",
    "rdb_temp_1_asd": "RDB TEMP 4",
    "rdb_temp_1_rdb": "RDB TEMP 3",
    "rdb_temp_asd": "RDB ASD II",
    "rdb_temp_rdb": "RDB TEMP II",
    "regional_territory": "Globe",
    "regional_territory_manager_name": "Huck Finn",
    "secondary_name": "Don LittleBreeze",
    "secondary_territory": "Starview Valley",
    "state": "Starlight",
    "uuid": "uuid2",
    "vrs_name": "Paul Piglet",
    "vrs_territory": "SometimesCountry",
    "zipcode": "77777",
  },
  Object {
    "action": "Modified",
    "address": "100 Nebraska Way",
    "city": "Metropolis",
    "cos_name": "Pascal Pythagoras",
    "cos_territory": "Shanghi Pie",
    "cos_territory_original": "Shangri Pie",
    "customer_code": "customer code",
    "dea_number": "DEA 1222",
    "hin_number": "HIM 23333",
    "key_account_executive": "Brian Bedford",
    "key_account_territory": "Big 8",
    "name": "James Tiberius Kirk",
    "postal": "23245",
    "primary_name": "Larry Wally Summers",
    "primary_name_original": "Larry William Summers",
    "primary_territory": "Midwest",
    "rdb_temp_1_asd": "RDB TEMP 2",
    "rdb_temp_1_rdb": "RDB TEMP 1",
    "rdb_temp_asd": "RDB ASD I",
    "rdb_temp_rdb": "RDB TEMP I",
    "regional_territory": "Oceana",
    "regional_territory_manager_name": "Tom Sawyer",
    "secondary_name": "Dorothy Bigwind",
    "secondary_territory": "Arkansa Valley",
    "state": "Nebraska",
    "uuid": "uuid1",
    "vrs_name": "Peter Pan",
    "vrs_territory": "NeverLand",
    "zipcode": "11311",
    "zipcode_original": "11111",
  },
  Object {
    "action": "Modified",
    "address": "100 Kapla Path",
    "address_original": "100 Vulcan Path",
    "city": "Pom Far",
    "cos_name": "Julius Shakespeare",
    "cos_territory": "Hong Fang",
    "customer_code": "customer code1",
    "key_account_executive": "Brianna Tablecrossing",
    "key_account_territory": "Cluster 15",
    "name": "Worf",
    "name_original": "Spock",
    "postal": "33333",
    "primary_name": "Betty Winters",
    "primary_territory": "EAST",
    "rdb_temp_1_asd": "RDB TEMP 4",
    "rdb_temp_1_rdb": "RDB TEMP 3",
    "rdb_temp_asd": "RDB ASD II",
    "rdb_temp_rdb": "RDB TEMP II",
    "regional_territory": "Globe",
    "regional_territory_manager_name": "Huck Finn",
    "secondary_name": "Don LittleBreeze",
    "secondary_territory": "Starview Valley",
    "state": "Starlight",
    "uuid": "uuid2",
    "vrs_name": "Paul Sabertooth",
    "vrs_name_original": "Paul Piglet",
    "vrs_territory": "SometimesCountry",
    "zipcode": "77777",
  },
]
`;

exports[`CustomerRecordFormatter #recordsToTableData should convert remove comparisons to a list of table records correctly 1`] = `
Array [
  Object {
    "action": "Removed",
    "address": "100 Nebraska Way",
    "city": "Metropolis",
    "cos_name": "Pascal Pythagoras",
    "cos_territory": "Shangri Pie",
    "customer_code": "customer code",
    "dea_number": "DEA 1222",
    "hin_number": "HIM 23333",
    "key_account_executive": "Brian Bedford",
    "key_account_territory": "Big 8",
    "name": "James Tiberius Kirk",
    "postal": "23245",
    "primary_name": "Larry William Summers",
    "primary_territory": "Midwest",
    "rdb_temp_1_asd": "RDB TEMP 2",
    "rdb_temp_1_rdb": "RDB TEMP 1",
    "rdb_temp_asd": "RDB ASD I",
    "rdb_temp_rdb": "RDB TEMP I",
    "regional_territory": "Oceana",
    "regional_territory_manager_name": "Tom Sawyer",
    "secondary_name": "Dorothy Bigwind",
    "secondary_territory": "Arkansa Valley",
    "state": "Nebraska",
    "uuid": "uuid1",
    "vrs_name": "Peter Pan",
    "vrs_territory": "NeverLand",
    "zipcode": "11111",
  },
  Object {
    "action": "Removed",
    "address": "100 Vulcan Path",
    "city": "Pom Far",
    "cos_name": "Julius Shakespeare",
    "cos_territory": "Hong Fang",
    "customer_code": "customer code1",
    "key_account_executive": "Brianna Tablecrossing",
    "key_account_territory": "Cluster 15",
    "name": "Spock",
    "postal": "33333",
    "primary_name": "Betty Winters",
    "primary_territory": "EAST",
    "rdb_temp_1_asd": "RDB TEMP 4",
    "rdb_temp_1_rdb": "RDB TEMP 3",
    "rdb_temp_asd": "RDB ASD II",
    "rdb_temp_rdb": "RDB TEMP II",
    "regional_territory": "Globe",
    "regional_territory_manager_name": "Huck Finn",
    "secondary_name": "Don LittleBreeze",
    "secondary_territory": "Starview Valley",
    "state": "Starlight",
    "uuid": "uuid2",
    "vrs_name": "Paul Piglet",
    "vrs_territory": "SometimesCountry",
    "zipcode": "77777",
  },
]
`;
